reposcan/src/main/java/com/jn/shelltools/supports/gradle/generated/GradleParser.java
// Generated from Gradle.g4 by ANTLR 4.7
package com.jn.shelltools.supports.gradle.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GradleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLRF=1, SPACE=2, NUM=3, BOOL=4, STRING=5, COMMENT=6, NULL=7, COLON=8, 
		EQUALS=9, COMMA=10, MIDDLE_BRACE_START=11, MIDDLE_BRACE_END=12, SYMBOL=13, 
		BIG_BRACE_START=14, BIG_BRACE_END=15, SMALL_BRACE_START=16, SMALL_BRACE_END=17;
	public static final int
		RULE_simpleKey = 0, RULE_simpleKeyValuePair = 1, RULE_simpleKeyValuePairs = 2, 
		RULE_stringToClosurePair = 3, RULE_simpleValue = 4, RULE_sequence = 5, 
		RULE_value = 6, RULE_array = 7, RULE_funcName = 8, RULE_var = 9, RULE_defineVariable = 10, 
		RULE_funcInvokeWithoutClosure = 11, RULE_groovyStatement = 12, RULE_closureBody = 13, 
		RULE_closure = 14, RULE_funcInvoke = 15, RULE_program = 16;
	public static final String[] ruleNames = {
		"simpleKey", "simpleKeyValuePair", "simpleKeyValuePairs", "stringToClosurePair", 
		"simpleValue", "sequence", "value", "array", "funcName", "var", "defineVariable", 
		"funcInvokeWithoutClosure", "groovyStatement", "closureBody", "closure", 
		"funcInvoke", "program"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, "'null'", "':'", "'='", "','", 
		"'['", "']'", null, "'{'", "'}'", "'('", "')'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "CLRF", "SPACE", "NUM", "BOOL", "STRING", "COMMENT", "NULL", "COLON", 
		"EQUALS", "COMMA", "MIDDLE_BRACE_START", "MIDDLE_BRACE_END", "SYMBOL", 
		"BIG_BRACE_START", "BIG_BRACE_END", "SMALL_BRACE_START", "SMALL_BRACE_END"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gradle.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GradleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SimpleKeyContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(GradleParser.STRING, 0); }
		public TerminalNode SYMBOL() { return getToken(GradleParser.SYMBOL, 0); }
		public SimpleKeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleKey; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).enterSimpleKey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).exitSimpleKey(this);
		}
	}

	public final SimpleKeyContext simpleKey() throws RecognitionException {
		SimpleKeyContext _localctx = new SimpleKeyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_simpleKey);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			_la = _input.LA(1);
			if ( !(_la==STRING || _la==SYMBOL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleKeyValuePairContext extends ParserRuleContext {
		public SimpleKeyContext simpleKey() {
			return getRuleContext(SimpleKeyContext.class,0);
		}
		public TerminalNode COLON() { return getToken(GradleParser.COLON, 0); }
		public SimpleValueContext simpleValue() {
			return getRuleContext(SimpleValueContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(GradleParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(GradleParser.SPACE, i);
		}
		public SimpleKeyValuePairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleKeyValuePair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).enterSimpleKeyValuePair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).exitSimpleKeyValuePair(this);
		}
	}

	public final SimpleKeyValuePairContext simpleKeyValuePair() throws RecognitionException {
		SimpleKeyValuePairContext _localctx = new SimpleKeyValuePairContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_simpleKeyValuePair);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			simpleKey();
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(37);
				match(SPACE);
				}
			}

			setState(40);
			match(COLON);
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(41);
				match(SPACE);
				}
			}

			setState(44);
			simpleValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleKeyValuePairsContext extends ParserRuleContext {
		public List<SimpleKeyValuePairContext> simpleKeyValuePair() {
			return getRuleContexts(SimpleKeyValuePairContext.class);
		}
		public SimpleKeyValuePairContext simpleKeyValuePair(int i) {
			return getRuleContext(SimpleKeyValuePairContext.class,i);
		}
		public List<TerminalNode> SPACE() { return getTokens(GradleParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(GradleParser.SPACE, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GradleParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GradleParser.COMMA, i);
		}
		public SimpleKeyValuePairsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleKeyValuePairs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).enterSimpleKeyValuePairs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).exitSimpleKeyValuePairs(this);
		}
	}

	public final SimpleKeyValuePairsContext simpleKeyValuePairs() throws RecognitionException {
		SimpleKeyValuePairsContext _localctx = new SimpleKeyValuePairsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simpleKeyValuePairs);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(46);
				match(SPACE);
				}
			}

			setState(49);
			simpleKeyValuePair();
			setState(60);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(51);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==SPACE) {
						{
						setState(50);
						match(SPACE);
						}
					}

					setState(53);
					match(COMMA);
					setState(55);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==SPACE) {
						{
						setState(54);
						match(SPACE);
						}
					}

					setState(57);
					simpleKeyValuePair();
					}
					} 
				}
				setState(62);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringToClosurePairContext extends ParserRuleContext {
		public SimpleKeyContext simpleKey() {
			return getRuleContext(SimpleKeyContext.class,0);
		}
		public TerminalNode SPACE() { return getToken(GradleParser.SPACE, 0); }
		public ClosureContext closure() {
			return getRuleContext(ClosureContext.class,0);
		}
		public StringToClosurePairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringToClosurePair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).enterStringToClosurePair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).exitStringToClosurePair(this);
		}
	}

	public final StringToClosurePairContext stringToClosurePair() throws RecognitionException {
		StringToClosurePairContext _localctx = new StringToClosurePairContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stringToClosurePair);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			simpleKey();
			setState(64);
			match(SPACE);
			setState(65);
			closure();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleValueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(GradleParser.STRING, 0); }
		public TerminalNode NUM() { return getToken(GradleParser.NUM, 0); }
		public TerminalNode BOOL() { return getToken(GradleParser.BOOL, 0); }
		public TerminalNode NULL() { return getToken(GradleParser.NULL, 0); }
		public SimpleValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).enterSimpleValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).exitSimpleValue(this);
		}
	}

	public final SimpleValueContext simpleValue() throws RecognitionException {
		SimpleValueContext _localctx = new SimpleValueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_simpleValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUM) | (1L << BOOL) | (1L << STRING) | (1L << NULL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SequenceContext extends ParserRuleContext {
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public List<StringToClosurePairContext> stringToClosurePair() {
			return getRuleContexts(StringToClosurePairContext.class);
		}
		public StringToClosurePairContext stringToClosurePair(int i) {
			return getRuleContext(StringToClosurePairContext.class,i);
		}
		public List<TerminalNode> SPACE() { return getTokens(GradleParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(GradleParser.SPACE, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GradleParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GradleParser.COMMA, i);
		}
		public SequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).enterSequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).exitSequence(this);
		}
	}

	public final SequenceContext sequence() throws RecognitionException {
		SequenceContext _localctx = new SequenceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sequence);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(69);
				match(SPACE);
				}
				break;
			}
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(72);
				value();
				}
				break;
			case 2:
				{
				setState(73);
				stringToClosurePair();
				}
				break;
			}
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(77);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==SPACE) {
						{
						setState(76);
						match(SPACE);
						}
					}

					setState(79);
					match(COMMA);
					setState(81);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						setState(80);
						match(SPACE);
						}
						break;
					}
					setState(85);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
					case 1:
						{
						setState(83);
						value();
						}
						break;
					case 2:
						{
						setState(84);
						stringToClosurePair();
						}
						break;
					}
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public SimpleValueContext simpleValue() {
			return getRuleContext(SimpleValueContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public StringToClosurePairContext stringToClosurePair() {
			return getRuleContext(StringToClosurePairContext.class,0);
		}
		public SimpleKeyValuePairsContext simpleKeyValuePairs() {
			return getRuleContext(SimpleKeyValuePairsContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_value);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				simpleValue();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				array();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				stringToClosurePair();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(95);
				simpleKeyValuePairs();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public TerminalNode MIDDLE_BRACE_START() { return getToken(GradleParser.MIDDLE_BRACE_START, 0); }
		public TerminalNode MIDDLE_BRACE_END() { return getToken(GradleParser.MIDDLE_BRACE_END, 0); }
		public List<TerminalNode> SPACE() { return getTokens(GradleParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(GradleParser.SPACE, i);
		}
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).exitArray(this);
		}
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_array);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(MIDDLE_BRACE_START);
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(99);
				match(SPACE);
				}
				break;
			}
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(102);
				sequence();
				}
				break;
			}
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(105);
				match(SPACE);
				}
			}

			setState(108);
			match(MIDDLE_BRACE_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncNameContext extends ParserRuleContext {
		public TerminalNode SYMBOL() { return getToken(GradleParser.SYMBOL, 0); }
		public FuncNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).enterFuncName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).exitFuncName(this);
		}
	}

	public final FuncNameContext funcName() throws RecognitionException {
		FuncNameContext _localctx = new FuncNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_funcName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(SYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public TerminalNode SYMBOL() { return getToken(GradleParser.SYMBOL, 0); }
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).exitVar(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(SYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineVariableContext extends ParserRuleContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(GradleParser.EQUALS, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(GradleParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(GradleParser.SPACE, i);
		}
		public DefineVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).enterDefineVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).exitDefineVariable(this);
		}
	}

	public final DefineVariableContext defineVariable() throws RecognitionException {
		DefineVariableContext _localctx = new DefineVariableContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_defineVariable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(114);
				match(SPACE);
				}
			}

			setState(117);
			var();
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(118);
				match(SPACE);
				}
			}

			setState(121);
			match(EQUALS);
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				{
				setState(122);
				match(SPACE);
				}
				break;
			}
			setState(125);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncInvokeWithoutClosureContext extends ParserRuleContext {
		public FuncNameContext funcName() {
			return getRuleContext(FuncNameContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(GradleParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(GradleParser.SPACE, i);
		}
		public TerminalNode SMALL_BRACE_START() { return getToken(GradleParser.SMALL_BRACE_START, 0); }
		public TerminalNode SMALL_BRACE_END() { return getToken(GradleParser.SMALL_BRACE_END, 0); }
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public FuncInvokeWithoutClosureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcInvokeWithoutClosure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).enterFuncInvokeWithoutClosure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).exitFuncInvokeWithoutClosure(this);
		}
	}

	public final FuncInvokeWithoutClosureContext funcInvokeWithoutClosure() throws RecognitionException {
		FuncInvokeWithoutClosureContext _localctx = new FuncInvokeWithoutClosureContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_funcInvokeWithoutClosure);
		int _la;
		try {
			setState(160);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,27,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(127);
					match(SPACE);
					}
				}

				setState(130);
				funcName();
				setState(132);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
				case 1:
					{
					setState(131);
					match(SPACE);
					}
					break;
				}
				setState(134);
				value();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(136);
					match(SPACE);
					}
				}

				setState(139);
				funcName();
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(140);
					match(SPACE);
					}
				}

				setState(143);
				match(SMALL_BRACE_START);
				setState(145);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,23,_ctx) ) {
				case 1:
					{
					setState(144);
					match(SPACE);
					}
					break;
				}
				setState(149);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,24,_ctx) ) {
				case 1:
					{
					setState(147);
					value();
					}
					break;
				case 2:
					{
					setState(148);
					sequence();
					}
					break;
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(151);
					match(SPACE);
					}
				}

				setState(154);
				match(SMALL_BRACE_END);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(156);
					match(SPACE);
					}
				}

				setState(159);
				funcName();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GroovyStatementContext extends ParserRuleContext {
		public DefineVariableContext defineVariable() {
			return getRuleContext(DefineVariableContext.class,0);
		}
		public FuncInvokeContext funcInvoke() {
			return getRuleContext(FuncInvokeContext.class,0);
		}
		public GroovyStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groovyStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).enterGroovyStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GradleListener ) ((GradleListener)listener).exitGroovyStatement(this);
		}
	}
